--- a/views/partials/_footer.handlebars
+++ b/views/partials/_footer.handlebars
@@ -50,7 +50,7 @@
                   <li class="list-inline-item">
                       <h5 class="mb-1">Register for free</h5>
                   </li>
-                  <li class="list-inline-item"><a href="login.html" class="btn btn-danger btn-rounded">Sign up!</a></li>
+                  <li class="list-inline-item"><a href="/login" class="btn btn-danger btn-rounded">Sign up!</a></li>
               </ul>
           </div>
 
