--- a/views/partials/_header.handlebars
+++ b/views/partials/_header.handlebars
@@ -8,7 +8,8 @@
        </ul>
        <form class="form-inline my-2 my-lg-0">
          <input class="form-control mr-sm-2" type="search" placeholder="Search">
-         <button class="btn btn-outline-success my-2 my-sm-0" id="account" type="submit"><a href="login.html">LOGIN</a></button>
-       </form>
+         <a href="/login" class="btn btn-primary" >LOGIN</a></button>
+
+        </form>
      </div>
 </nav>
