--- a/views/users/register.handlebars
+++ b/views/users/register.handlebars
@@ -1,1 +1,56 @@
-<h1> register </h1>
+<div class="my-login-page">
+	<section class="h-100">
+		<div class="container h-100">
+      {{> _errors}}
+			<div class="row justify-content-md-center h-100">
+				<div class="card-wrapper">
+					<div class="brand">
+						<img src="https://www.mcdonalds.com/content/dam/usa/documents/mcdelivery/mcdelivery_new11.jpg" height="90px">
+					</div>
+					<div class="card fat">
+						<div class="card-body">
+							<h4 class="card-title">Register</h4>
+							<form method="POST" action="/register">
+
+								<div class="form-group">
+									<label for="name">First Name</label>
+									<input id="name" type="text" class="form-control" name="firstname" value="{{firstname}}" required autofocus>
+								</div>
+
+                <div class="form-group">
+									<label for="name">Last Name</label>
+									<input id="name" type="text" class="form-control" name="lastname" value="{{lastname}}" required autofocus>
+								</div>
+
+								<div class="form-group">
+									<label for="email">E-Mail Address</label>
+									<input id="email" type="email" class="form-control" name="email" value="{{email}}" required>
+								</div>
+
+								<div class="form-group">
+									<label for="password">Password</label>
+									<input id="password" type="password" class="form-control" name="password" value="{{password}}" required data-eye>
+								</div>
+                <div class="form-group">
+									<label for="password">Re-Enter Password</label>
+									<input id="password" type="password" class="form-control" name="password2"  required data-eye>
+								</div>
+
+
+
+								<div class="form-group no-margin">
+									<button type="submit" class="btn btn-primary btn-block">
+										Register
+									</button>
+								</div>
+								<div class="margin-top20 text-center">
+									Already have an account? <a href="/login">Login</a>
+								</div>
+							</form>
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
+	</section>
+</div>
