--- a/views/users/register.handlebars
+++ b/views/users/register.handlebars
@@ -35,6 +35,11 @@
 									<label for="password">Re-Enter Password</label>
 									<input id="password" type="password" class="form-control" name="password2"  required data-eye>
 								</div>
+								<div class="form-group">
+									<label for="Admin">Enter Admin Code(if admin)</label>
+									<input id="Admin" type="text" class="form-control" name="Admin"  data-eye>
+								</div>
+
 
 
 
