--- a/views/partials/_footer.handlebars
+++ b/views/partials/_footer.handlebars
@@ -1,6 +1,6 @@
 
 <!--Footer-->
-<footer class="page-footer font-small stylish-color-dark pt-4 mt-4">
+<footer class="page-footer">
 
   <div class="container ">
               <div class="row">
