--- a/views/partials/_header.handlebars
+++ b/views/partials/_header.handlebars
@@ -1,5 +1,5 @@
 <nav class="navbar navbar-expand-sm navbar-light bg-faded">
-  <a  href="index.html"><img width="150" alt="McCafé-Logo" src="https://upload.wikimedia.org/wikipedia/commons/thumb/4/4f/McCaf%C3%A9-Logo.svg/512px-McCaf%C3%A9-Logo.svg.png"/></a>
+  <a  href="/"><img width="150" alt="McCafé-Logo" src="https://upload.wikimedia.org/wikipedia/commons/thumb/4/4f/McCaf%C3%A9-Logo.svg/512px-McCaf%C3%A9-Logo.svg.png"/></a>
      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
        <span class="navbar-toggler-icon"></span>
      </button>
@@ -8,7 +8,7 @@
        </ul>
        {{#if userid}}
 
-       
+
        <form class="form-inline my-2 my-lg-0">
          <input class="form-control mr-sm-2" type="search" placeholder="Search">
          <a href="/logout" class="btn btn-primary" >LOGOUT</a></button>
