--- a/views/users/dashboard.handlebars
+++ b/views/users/dashboard.handlebars
@@ -1,10 +1,9 @@
 {{#if userid.isAdmin}}
-<h1>YOu are an admin</h1>
+<h1>you are  a  admin</h1>
+
 
 
 {{else}}
-<h1>you are not a  admin</h1>
-
 
 
 {{/if}}
