--- a/views/users/login.handlebars
+++ b/views/users/login.handlebars
@@ -5,7 +5,7 @@
 			<div class="row justify-content-md-center h-100">
 				<div class="card-wrapper">
 					<div class="brand">
-						<img src="https://www.mcdonalds.com/content/dam/usa/documents/mcdelivery/mcdelivery_new11.jpg" height="90px">
+						<img src="http://simpleicon.com/wp-content/uploads/user1.png" height="90px">
 					</div>
 					<div class="card fat">
 						<div class="card-body">
