--- a/views/users/dashboard.handlebars
+++ b/views/users/dashboard.handlebars
@@ -1,261 +1,11 @@
 {{#if userid.isAdmin}}
 
-   <header id="header">
-     <div class="container">
-       <div class="row">
-         <div class="col-md-10">
-           <h1><i class="fa fa-street-view" style="font-size:36px"></i>Admin Dashboard <small>welcome {{userid.firstname}}</small></h1>
-         </div>
-         <div class="col-md-2">
-           <div class="dropdown create">
-             <button class="btn btn-default dropdown-toggle" type="button" id="dropdownMenu1" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">
-              Add item
-               <span class="caret"></span>
-             </button>
-             <ul class="dropdown-menu" aria-labelledby="dropdownMenu1">
-               <li class="list-group-item"><a  data-toggle="modal" data-target="#addPage">Add Item</a></li>
-               <li class="list-group-item"><a href="/admin/item">Items</a></li>
-             </ul>
-           </div>
-         </div>
-       </div>
-     </div>
-   </header>
-
-   <section id="breadcrumb">
-     <div class="container">
-       <ol class="breadcrumb">
-         <li class="active">Dashboard</li>
-       </ol>
-     </div>
-   </section>
-
-   <section id="main">
-     <div class="container">
-       <div class="row">
-         <div class="col-md-3">
-           <div class="list-group nav-tabs" role="tablist">
-             <a  class="list-group-item active nav-link main-color-bg" data-toggle="tab" href="#dashboard">
-               <i class="fa fa-street-view" style="font-size:36px"></i> Dashboard
-             </a>
-             <a  class="nav-link list-group-item" data-toggle="tab" href="#items"><i class="fa fa-cubes" style="font-size:36px"></i> Items <span class="badge badge-secondary">{{items}}</span></a>
-             <a class="nav-link list-group-item" data-toggle="tab" href="#complain"><i class="fa fa-comments" style="font-size:36px"></i> Complain <span class="badge badge-secondary">33</span></a>
-             <a  class="nav-link list-group-item" data-toggle="tab" href="#users"><i class="fa fa-user" style="font-size:36px"></i> Users <span class="badge badge-secondary">{{userstotal}}</span></a>
-           </div>
-         </div>
-
-
-         <div class="col-md-9">
-           <!-- Website Overview -->
-           <div class="tab-content">
-               <div id="dashboard" class="container tab-pane active"><br>
-                 <div class="panel panel-default">
-         <div class="panel-heading main-color-bg pl-3">
-           <h3 >Website Overview</h3>
-         </div>
-         <div class="panel-body">
-           <div class="row">
-           <div class="col-md-3">
-             <div class="card bg-faded dash-box">
-               <h2><i class="fa fa-user" style="font-size:36px"></i> {{userstotal}}</h2>
-               <h4>Users</h4>
-             </div>
-           </div>
-           <div class="col-md-3">
-             <div class="card bg-faded dash-box">
-               <h2><i class="fa fa-coffee" style="font-size:36px"></i> {{items}}</h2>
-               <h4>Items</h4>
-             </div>
-           </div>
-           <div class="col-md-3">
-             <div class="card bg-faded dash-box">
-               <h2><i class="fa fa-server" style="font-size:36px"></i>33</h2>
-               <h4>complains</h4>
-             </div>
-           </div>
-           <div class="col-md-3">
-             <div class="card bg-faded dash-box">
-               <h2><i class="fa fa-bar-chart" style="font-size:36px"></i>12,334</h2>
-               <h4>Visitors</h4>
-             </div>
-           </div>
-           </div>
-         </div>
-         </div>
-
-         <!-- Latest Users -->
-         <div class="panel panel-default mt-3">
-           <div class="panel-heading">
-             <h3 class="panel-title">Latest Users</h3>
-           </div>
-           <div class="panel-body">
-             <table class="table table-striped table-hover">
-                 <tr>
-                   <th>Name</th>
-                   <th>Email</th>
-                 </tr>
-
-               <tbody>
-                 {{#each users }}
-                 <tr>
-                   <td>{{firstname}} {{lastname}}</td>
-                   <td>{{email}}</td>
-                 </tr>
-                 {{/each}}
-               </tbody>
-               </table>
-           </div>
-         </div>
-               </div>
-
-                <!-- items tab starts here -->
-               <div id="items" class="container tab-pane fade"><br>
-                 <div class="panel-heading main-color-bg pl-3">
-                   <h3 >Items</h3>
-                 </div>
-                 <div class="panel panel-default mt-3">
-                   <div class="panel-heading">
-                     <h3 class="panel-title">All Items</h3>
-                   </div>
-                   <div class="panel-body">
-                     <table class="table table-striped table-hover">
-                         <tr>
-                           <th>Name</th>
-                           <th>Price</th>
-                           <th>Provider</th>
-                           <th>avalability</th>
-                           <th>
-
-                           </th>
-                         </tr>
-
-                       <tbody>
-                         {{#each itemsall }}
-                         <tr>
-                           <td>{{itemName}}</td>
-                           <td>{{itemPrice}}</td>
-                           <td>{{ItemProvider}}</td>
-                           {{#if ItemAvailable}}
-                              <td>Available</td>
-                           {{else}}
-                                <td>Not Available</td>
-                           {{/if}}
-                           <td class="form-inline">
-                             <a href="/posts/edit/{{_id}}" class="btn btn-primary left-align"><i class="fa fa-pencil"></i>edit</a>
-                             <form action="/posts/{{_id}}?_method=DELETE" method="post" class="ml-2" id="delete-form">
-                               <input type="hidden" name="_method" value="DELETE">
-                               <button type="submit" name="button" class="btn btn-primary"><i class="fa fa-remove"></i>Delete</button>
-                             </form>
-                          </td>
-                         </tr>
-                         {{/each}}
-                       </tbody>
-                       </table>
-                   </div>
-                 </div>
-
-    </div>
-      <!-- complain tab starts here -->
-    <div id="complain" class="container tab-pane fade"><br>
-      <div class="panel-heading main-color-bg pl-3">
-        <h3 >Complains</h3>
-      </div>
-<p>Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
-</div>
-
-
-
-  <!-- users tabs starts here -->
-  <div id="users" class="container tab-pane fade"><br>
-    <div class="panel-heading main-color-bg pl-3">
-      <h3 >Users</h3>
-    </div>
-    <div class="panel panel-default mt-3">
-      <div class="panel-heading">
-        <h3 class="panel-title">All Users</h3>
-      </div>
-      <div class="panel-body">
-        <table class="table table-striped table-hover">
-            <tr>
-              <th>Name</th>
-              <th>Email</th>
-              <th>Date Joined</th>
-            </tr>
-
-          <tbody>
-            {{#each usersall }}
-            <tr>
-              <td>{{firstname}} {{lastname}}</td>
-              <td>{{email}}</td>
-              <td>{{formatdate date 'MMMM Do YYYY'}}</td>
-            </tr>
-            {{/each}}
-          </tbody>
-          </table>
-      </div>
-    </div>
-    </div>
-    </div>
-<!--tabs ends here -->
-         </div>
-         <!-- col-md-9 ends here -->
-
-       </div>
-     </div>
-   </section>
-
-   <!-- Modals -->
-
-   <!-- Add Page -->
-   <div class="modal fade" id="addPage" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
- <div class="modal-dialog" role="document">
-   <div class="modal-content">
-
-     <div class="modal-body">
-       <form  action="/items" method="post">
-       <div class="form-group">
-         <label>Item Name</label>
-         <input type="text" name="itemname" class="form-control" required>
-       </div>
-       <div class="form-group">
-         <label>Description</label>
-         <textarea name="editor1" name="description" class="form-control" required></textarea>
-       </div>
-       <div class="checkbox">
-         <label>
-           <input name="avalability" type="checkbox" > Available
-         </label>
-       </div>
-       <div class="form-group">
-         <label>Price</label>
-         <input type="text" name="itemprice" class="form-control" required>
-       </div>
-       <div class="form-group">
-         <label>Provider(TQ etc)</label>
-         <input type="text"  name="Itemprovider" class="form-control" required>
-       </div>
-       <div class="form-group no-margin">
-         <button type="submit" class="btn btn-primary btn-block">
-           Add Item
-         </button>
-       </div>
-        </form>
-     </div>
-     <div class="modal-footer">
-       <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-
-     </div>
-
-   </div>
- </div>
-</div>
-
-
+   {{> _admindash}}
 
 
 {{else}}
 
 
-
+{{> _userdash}}
 
 {{/if}}
