ready for tommorow almost

--- a/views/partials/_header.handlebars
+++ b/views/partials/_header.handlebars
@@ -21,10 +21,10 @@
           </button>
           <ul class="dropdown-menu" aria-labelledby="dropdownMenu1">
             <div class="list-group">
-   <a href="/items" class="list-group-item list-group-item-action">Explore Items</a>
-   <a href="/cart" class="list-group-item list-group-item-action">Cart <span class="badge  badge-primary">{{size sessions.cart}}</span> </a>
-   <a href="/complain" class="list-group-item list-group-item-action">Complain</a>
-   <a href="/dashboard" class="list-group-item list-group-item-action">Dashboard</a>
+   <a href="/items" class="list-group-item list-group-item-action"><i class="fa fa-shopping-cart"></i> Explore Items</a>
+   <a href="/cart" class="list-group-item list-group-item-action"><i class="fa fa-shopping-bag"></i> Cart <span class="badge  badge-primary float-right mt-1">{{size sessions.cart}}</span> </a>
+   <a href="/complain" class="list-group-item list-group-item-action"><i class="fa fa-comments"></i> Complain</a>
+   <a href="/dashboard" class="list-group-item list-group-item-action"><i class="fa fa-dashboard"></i> Dashboard</a>
  </div>
 </div>
 
