--- a/views/partials/_userdash.handlebars
+++ b/views/partials/_userdash.handlebars
@@ -2,7 +2,7 @@
   <div class="container">
     <div class="row">
       <div class="col-md-10">
-        <h1><i class="fa fa-street-view" style="font-size:36px"></i><small class="ml-5">welcome {{userid.firstname}} {{userid.lastname}}</small></h1>
+        <h1><i class="fa fa-dashboard" style="font-size:36px"></i> <small class="ml-5">welcome {{userid.firstname}} {{userid.lastname}}</small></h1>
       </div>
       <div class="col-md-2 pl-5">
           <a class="btn btn-primary mt-2" href="/items">
@@ -24,6 +24,7 @@
           </a>
           <a  class="nav-link list-group-item" data-toggle="tab" href="#items"><i class="fa fa-glass" style="font-size:36px"></i> Orders</a>
           <a class="nav-link list-group-item" data-toggle="tab" href="#complain"><i class="fa fa-comments" style="font-size:36px"></i> Complains and Suggestions</a>
+          <a class="nav-link list-group-item"  href="/cart"><i class="fa fa-shopping-bag" style="font-size:36px;"></i> Cart  <span class="badge  badge-primary  float-right mt-2">{{size sessions.cart}}</span></a>
         </div>
       </div>
 
@@ -82,9 +83,11 @@
    <div class="panel-heading main-color-bg pl-3 pt-3 pb-3">
      <h3 ><i class="fa fa-comments" style="font-size:36px"></i> Complains and Suggestions you gave</h3>
    </div>
+
     <div class="row">
       {{#each complain}}
-      {{#if (conditional email userid.email)}}
+      {{#if (conditional email ../userid.email)}}
+
       <div class="col-md-12">
     <div class="card mt-3" >
       <div class="card-header">
@@ -93,7 +96,7 @@
   <div class="card-body">
     <h5 class="card-title"> <p class="text-muted">Subject: {{subject}}</p></h5>
     <p class="card-text">{{ complain }}</p>
-    <p class="text-muted">Submitted by : {{email}}</p>
+
   </div>
   <div class="card-footer text-muted">
     Submitted on {{formatdate date 'MMMM Do YYYY'}}
@@ -101,6 +104,7 @@
 </div>
 </div>
 {{/if}}
+
 {{/each}}
 
 </div>
