--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -20,6 +20,7 @@
 
     <main role="main" class="container-fluid">
           {{> _sucess}}
+          {{> _errors}}
           {{{body}}}
 
         </main>
