--- a/views/partials/_header.handlebars
+++ b/views/partials/_header.handlebars
@@ -22,7 +22,7 @@
           <ul class="dropdown-menu" aria-labelledby="dropdownMenu1">
             <div class="list-group">
    <a href="/items" class="list-group-item list-group-item-action"><i class="fa fa-shopping-cart"></i> Explore Items</a>
-   <a href="/cart" class="list-group-item list-group-item-action"><i class="fa fa-shopping-bag"></i> Cart <span class="badge  badge-primary float-right mt-1">{{size sessions.cart}}</span> </a>
+   <a href="/cart" class="list-group-item list-group-item-action"><i class="fa fa-shopping-bag"></i> Cart {{#if (conditional1 (total sessions.cart) 0)}}  {{else}} <span class="badge  badge-primary float-right mt-1">{{size sessions.cart}}</span> {{/if}} </a>
    <a href="/complain" class="list-group-item list-group-item-action"><i class="fa fa-comments"></i> Complain</a>
    <a href="/dashboard" class="list-group-item list-group-item-action"><i class="fa fa-dashboard"></i> Dashboard</a>
  </div>
