--- a/views/partials/_userdash.handlebars
+++ b/views/partials/_userdash.handlebars
@@ -22,9 +22,9 @@
           <a  class="list-group-item active nav-link main-color-bg" data-toggle="tab" href="#dashboard">
             <i class="fa fa-street-view" style="font-size:36px"></i> Personal Info
           </a>
-          <a  class="nav-link list-group-item" data-toggle="tab" href="#items"><i class="fa fa-glass" style="font-size:36px"></i> Orders</a>
+          <a  class="nav-link list-group-item"  href="/orders/my"><i class="fa fa-glass" style="font-size:36px"></i> Orders</a>
           <a class="nav-link list-group-item" data-toggle="tab" href="#complain"><i class="fa fa-comments" style="font-size:36px"></i> Complains and Suggestions</a>
-          <a class="nav-link list-group-item"  href="/cart"><i class="fa fa-shopping-bag" style="font-size:36px;"></i> Cart  <span class="badge  badge-primary  float-right mt-2">{{size sessions.cart}}</span></a>
+          <a class="nav-link list-group-item"  href="/cart"><i class="fa fa-shopping-bag" style="font-size:36px;"></i> Cart  <span class="badge  badge-primary  float-right mt-2"></span></a>
         </div>
       </div>
 
@@ -45,39 +45,7 @@
 </div>
 
 
-             <!-- items tab starts here -->
-            <div id="items" class="container tab-pane fade"><br>
-              <div class="panel-heading main-color-bg pl-3 pt-3 pb-3">
-                <h3 ><i class="fa fa-cubes" style="font-size:36px"></i> Items</h3>
-              </div>
-              <div class="panel panel-default mt-3">
-                <div class="panel-heading">
-                  <h3 class="panel-title">All Items</h3>
-                </div>
-                <div class="panel-body">
-                  <table class="table table-striped table-hover">
-                      <tr>
-                        <th>Name</th>
-                        <th>Price</th>
-                        <th>Provider</th>
-                        <th>Order Date</th>
 
-                      </tr>
-
-                    <tbody>
-
-                      <tr>
-                        <td>{{itemName}}</td>
-                        <td>{{itemPrice}}</td>
-                        <td>{{ItemProvider}}</td>
-                        <td>{{orderDate}}</td>
-
-                    </tbody>
-                    </table>
-                </div>
-              </div>
-
- </div>
    <!-- complain tab starts here -->
  <div id="complain" class="container tab-pane fade"><br>
    <div class="panel-heading main-color-bg pl-3 pt-3 pb-3">
