--- a/views/partials/_admindash.handlebars
+++ b/views/partials/_admindash.handlebars
@@ -12,7 +12,7 @@
           </button>
           <ul class="dropdown-menu" aria-labelledby="dropdownMenu1">
             <li class="list-group-item"><a  data-toggle="modal" data-target="#addPage">Add Item</a></li>
-            <li class="list-group-item"><a href="/admin/item">Items</a></li>
+            <li class="list-group-item"><a href="/admin/orders">All orders</a></li>
           </ul>
         </div>
       </div>
@@ -73,7 +73,7 @@
         </div>
         <div class="col-md-3">
           <div class="card bg-faded dash-box">
-            <h2><i class="fa fa-bar-chart" style="font-size:36px"></i> 12</h2>
+            <h2><i class="fa fa-bar-chart" style="font-size:36px"></i> {{orderid.length}}</h2>
             <h4>Total Orders</h4>
           </div>
         </div>
