some ui changes

--- a/views/partials/_footer.handlebars
+++ b/views/partials/_footer.handlebars
@@ -1,4 +1,6 @@
 
+
+
 <!--Footer-->
 <footer class="page-footer">
 
@@ -17,24 +19,15 @@
                   <div class="col-md-2 mx-auto">
                       <h5 class="text-uppercase mb-4 mt-3">Quick links</h5>
                       <ul class="list-unstyled">
-                          <li><a href="#!">Cafe menu</a></li>
+                          <li><a href="/items">Cafe menu</a></li>
                           <li><a href="mailto:thakursachin467@gmail.com">Contact Us</a></li>
-                          <li><a href="complain/complain.html">Complain</a></li>
+                          <li><a href="/complain">Complain</a></li>
                       </ul>
                   </div>
 
 
 
 
-                  <div class="col-md-2">
-                      <h5 class="text-uppercase mb-4 mt-3 font-weight-bold">Our menu</h5>
-                      <ul class="list-unstyled">
-                          <li><a href="#!">What's new</a></li>
-                          <li><a href="#!">Food</a></li>
-                          <li><a href="#!">Beverages</a></li>
-                          <li><a href="#!">Combos</a></li>
-                      </ul>
-                  </div>
 
 
 
@@ -44,15 +37,6 @@
 
           <hr>
 
-
-          <div class="text-center ">
-              <ul class="list-unstyled list-inline">
-                  <li class="list-inline-item">
-                      <h5 class="mb-1">Register for free</h5>
-                  </li>
-                  <li class="list-inline-item"><a href="/login" class="btn btn-danger btn-rounded">Sign up!</a></li>
-              </ul>
-          </div>
 
 
           <hr>
